fix dark theme contrast

--- a/app/assets/style/main.scss
+++ b/app/assets/style/main.scss
@@ -71,6 +71,11 @@ a {
     }
 }
 
+.dark-mode a:hover {
+    color: hsl(288, 50%, 77%);
+    background-color: var(--bg-darker);
+}
+
 // h1 {
 //     font-size: 3rem;
 // }
